fixed contact form spacing and color issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,5 +186,29 @@
       transform: translateY(-45px);
     }
   }
+  .contactUs {
+    margin-top: 20px;
+    position: relative;
+  }
+  .row7 {
+    width: 100%;
+    height: 400px;
+    margin-right: -15px;
+    margin-left: -15px;
+    padding: 0px 20px;
+    background-size: cover;
+    text-align: center;
+  }
+  input[type=text],input[type=email],#comment{
+    background: transparent;
+    color: white;
+    font-size: 20px;
+    font-family: 'Copse', serif;
+  }
   
-  
+  .form-control::-webkit-input-placeholder { 
+    color: rgb(248, 244, 244); 
+  }
+  #header1{
+      color: azure;
+  }
